# PackageKit

./: meson_options.txt
backends/xbps/: meson.build  pk-backend-xbps.c  pk-backend-xbps.h  pk-xbps-dependencies.c  pk-xbps-packages.c  pk-xbps-repo.c  pk-xbps-search.c  pk-xbps-transaction.c  pk-xbps-updates.c  repos.list
backends/xbps/xbps.d/: repos.conf
data/: org.freedesktop.PackageKit.service.in
etc/: PackageKit.conf
